[#2569] Add indicator to accordions to show state, fix spacing for empty descriptions

--- a/dnd5e.css
+++ b/dnd5e.css
@@ -732,11 +732,19 @@ h5 {
 .accordion {
   transition: margin-bottom 500ms ease;
 }
-.accordion.collapsed {
-  margin-bottom: 0.5rem;
-}
 .accordion.collapsed > .accordion-content {
   height: 0;
+}
+.accordion-indicator {
+  display: none;
+  transition: transform 500ms ease;
+}
+.accordion .accordion-indicator {
+  display: inherit;
+  transform: rotate(0deg);
+}
+.accordion.collapsed .accordion-indicator {
+  transform: rotate(-90deg);
 }
 .accordion-heading {
   cursor: pointer;
@@ -1912,12 +1920,13 @@ h5 {
 .dnd5e.sheet.item [data-tab="description"] .item-description .description-header {
   display: flex;
   align-items: first baseline;
-  justify-content: space-between;
+  gap: 0.5em;
   margin-block-end: 0;
   padding: 0.25rem;
   background-color: rgba(0, 0, 0, 0.05);
 }
 .dnd5e.sheet.item [data-tab="description"] .item-description .description-header .description-edit {
+  margin-inline-start: auto;
   opacity: 20%;
 }
 .dnd5e.sheet.item [data-tab="description"] .item-description .description-header:hover .description-edit {
@@ -1930,11 +1939,22 @@ h5 {
   height: auto;
   padding-inline: 0.25rem;
 }
+.dnd5e.sheet.item [data-tab="description"] .item-description .accordion {
+  margin-block-end: 0.5rem;
+}
+.dnd5e.sheet.item [data-tab="description"] .item-description .accordion p:last-child {
+  margin-block-end: 0;
+}
 .dnd5e.sheet.item [data-tab="description"] .item-description .accordion.collapsed > .editor.accordion-content {
   height: 0;
 }
 .dnd5e.sheet.item [data-tab="description"] .item-description .editor.accordion-content > .editor-content {
   overflow: hidden;
+}
+.dnd5e.sheet.item [data-tab="description"] .item-description .accordion-indicator {
+  align-self: center;
+  opacity: 0.5;
+  font-size: 0.75em;
 }
 .dnd5e.sheet.item .details input[type="text"],
 .dnd5e.sheet.item .details input[type="number"],
